# dspy-biomedic-papers-classifier

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: input.csv
notebook/: notebook_gepa.ipynb  notebook_miprov2.ipynb
programs/: biomedical_classifier_base.json  biomedical_classifier_optimized.json  cardiovascular_classifier_base.json  cardiovascular_classifier_optimized.json  hepatorenal_classifier_base.json  hepatorenal_classifier_optimized.json  multilabel_classifier_base.json  multilabel_classifier_gepa_optimized.json  neurological_classifier_base.json  neurological_classifier_optimized.json  oncological_classifier_optimized.json
